# speaktome

./: .gitignore  CLAUDE.md  README-webserver.md  README.md  TTS_README.md  pyproject.toml  pytest.ini  requirements-web.txt  requirements.txt  start_server.py  test_tts.py  verify_packages.py  whisper_transcriber.py
client/: index.html
client/css/: styles.css
client/js/: app.js  audio-client.js  chat-interface.js  tts-client.js  utils.js
client/js/audio/: audio_client_v2.js  audio_recorder.js  file_uploader.js  websocket_client.js
client_desktop/: README.md  install.sh  pytest.ini  requirements.txt  speaktome_client.py  test_voice_client.py  voice_client.py  voice_client_config.json
client_desktop/client/: __init__.py  container.py  settings.py  voice_client_app.py
client_desktop/client/gui/: __init__.py  gui_events.py  history_window.py  main_window.py  settings_window.py
client_desktop/client/input/: __init__.py  hotkey_handler.py
client_desktop/client/pipeline/: __init__.py  audio_pipeline.py
client_desktop/client/providers/: __init__.py  audio_provider.py  text_injection_provider.py  transcription_client.py
client_desktop/client/storage/: __init__.py  recording_storage.py
client_desktop/tests/: __init__.py  conftest.py  run_tests.py
client_desktop/tests/e2e/: __init__.py  test_complete_workflows.py
client_desktop/tests/integration/: __init__.py  test_event_system.py  test_provider_integration.py
client_desktop/tests/property_based/: __init__.py  test_pure_functions.py
client_desktop/tests/unit/: __init__.py  test_functional_utils.py  test_pipeline.py
server/: audio_processor.py  phase3_server.py
server/connection/: __init__.py  websocket_manager.py
server/container/: __init__.py  dependency_container.py
server/events/: __init__.py  event_bus.py
server/functional/: result_monad.py
server/pipeline/: __init__.py  audio_pipeline.py  tts_pipeline.py
server/plugins/: __init__.py  example_plugins.py  plugin_system.py
server/providers/: __init__.py  coqui_tts_provider.py  transcription_provider.py  tts_provider.py  whisper_provider.py
server/routing/: __init__.py  transcription_router.py  websocket_handlers.py
server/status/: __init__.py  server_status_provider.py
server/validation/: __init__.py  file_validator.py
shared/: __init__.py  events.py  functional.py
tests/: README.md  conftest.py  run_tests.py  test_utils.py
tests/e2e/: test_realistic_workflows.py
tests/integration/: test_audio_pipeline.py  test_event_system.py
tests/unit/: test_result_monad.py
